Add database and implement all(?) functions
MemberListActivity page and all elements now functional, responding to user
input and refresh after appropriate database methods are called

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="login_fail_alert_message">Incorrect user name or password</string>
     <string name="prefs_user_default">user</string>
     <string name="prefs_password_default">password</string>
+    <string name="query_fail_alert_title">Database Connection Failure</string>
+    <string name="query_fail_alert_message">Could not communicate the app database.</string>
+    <string name="empty_member_list_message">Tap \'+\' to add member</string>
 </resources>
