--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="query_fail_alert_message">Could not communicate the app database.</string>
     <string name="empty_member_list_message">Tap \'+\' to add member</string>
     <string name="member_search_bar_hint">Search members...</string>
+    <string name="account_user_name_label">User Name</string>
+    <string name="account_password_label">Password</string>
 </resources>
