--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="member_search_bar_hint">Search members...</string>
     <string name="account_user_name_label">User Name</string>
     <string name="account_password_label">Password</string>
+    <string name="member_detail_id_label">Member ID</string>
+    <string name="member_detail_level_label">Member Level</string>
+    <string name="member_detail_phone_label">Phone #</string>
+    <string name="member_detail_email_label">Email</string>
+    <string name="member_detail_call_toast">Calling %s...</string>
+    <string name="given_name_hint">First name</string>
+    <string name="add_family_name_hint">Last name</string>
+    <string name="add_phone_hint">Phone</string>
+    <string name="add_email_hint">Email</string>
+    <string name="add_member_missing_values_toast">Please fill in missing values</string>
 </resources>
